Add progressive perlcritic test

--- a/ChangeLog
+++ b/ChangeLog
@@ -19,6 +19,7 @@ Revision history for Rex
  - Add on_no_change hook for file commands
 
  [REVISION]
+ - Add progressive perlcritic test
 
 1.12.2 2020-09-05 Ferenc Erki <erkiferenc@gmail.com>
  [BUG FIXES]
