Enable more perlcritic policies

--- a/ChangeLog
+++ b/ChangeLog
@@ -20,6 +20,7 @@ Revision history for Rex
 
  [REVISION]
  - Add progressive perlcritic test
+ - Enable more perlcritic policies
 
 1.12.2 2020-09-05 Ferenc Erki <erkiferenc@gmail.com>
  [BUG FIXES]
