--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,7 @@ Revision history for Rex
  [BUG FIXES]
  - Fix MD5 checksumming if filename looks like md5 output
  - Fix fallback hostname detection on Linux
+ - Require minimum version of List::MoreUtils
 
  [DOCUMENTATION]
 
