--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,8 @@ Revision history for Rex
  [API CHANGES]
 
  [BUG FIXES]
+ - Fix MD5 checksumming when default perl does not have Digest::MD5 or
+ incompatible with the perl running rex
 
  [DOCUMENTATION]
 
