--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,7 @@ Revision history for Rex
 
  [BUG FIXES]
  - Fix gathering OS version for Cygwin
+ - Fix excessive caching when querying a CMDB item
 
  [DOCUMENTATION]
 
