--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,7 @@ Revision history for Rex
  [BUG FIXES]
 
  [DOCUMENTATION]
+ - Remove documentation for non-existant autodie feature.
 
  [ENHANCEMENTS]
 
