Add missing autodie feature
Autodie was added back in 0.56, but there was never a flag to enable it.
As per the policy of having both enable and disable flags for features,
and the "no_autodie" flag already exists, this adds support for
"autodie".

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@ Revision history for Rex
 
 {{$NEXT}}
  [API CHANGES]
+ - Add autodie feature
 
  [BUG FIXES]
  - Fix gathering OS version for Cygwin
