--- a/ChangeLog
+++ b/ChangeLog
@@ -2,12 +2,12 @@ Revision history for Rex
 
 {{$NEXT}}
  [API CHANGES]
- - Add autodie feature
 
  [BUG FIXES]
  - Fix gathering OS version for Cygwin
  - Fix excessive caching when querying a CMDB item
  - Fix gathering OS version for Windows
+ - Add missing autodie feature flag
 
  [DOCUMENTATION]
 
