--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,7 @@ Revision history for Rex
  [API CHANGES]
 
  [BUG FIXES]
+ - Fix parsing debconf values containing colons
 
  [DOCUMENTATION]
  - Remove misleading sudo command variant
