--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,7 @@ Revision history for Rex
  - Fix parsing debconf values containing colons
 
  [DOCUMENTATION]
+ - Clarify contributing guide
  - Remove misleading sudo command variant
 
  [ENHANCEMENTS]
