Added Slackware Linux support
- Detect Slackware Linux via lsb_release or via /etc/slackware-version file
- Use slackpkg for download, install, updare and remove packages
- Use /etc/rc.d/rc.* files for start & stop Slackware Linux services

--- a/ChangeLog
+++ b/ChangeLog
@@ -14,6 +14,7 @@ Revision history for Rex
  [MINOR]
 
  [NEW FEATURES]
+ - Added Slackware Linux support <giuseppe.diterlizzi@gmail.com>
 
  [REVISION]
 
