--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,7 @@ Revision history for Rex
 
  [DOCUMENTATION]
  - Add section about Rex core vs extending Rex
+ - Add common scenarios to contributing guide
 
  [ENHANCEMENTS]
 
