Clarify documentation of run command

--- a/ChangeLog
+++ b/ChangeLog
@@ -8,6 +8,7 @@ Revision history for Rex
  [DOCUMENTATION]
  - Add section about Rex core vs extending Rex
  - Add common scenarios to contributing guide
+ - Clarify documentation of run command
 
  [ENHANCEMENTS]
 
