--- a/ChangeLog
+++ b/ChangeLog
@@ -9,6 +9,7 @@ Revision history for Rex
  - Add section about Rex core vs extending Rex
  - Add common scenarios to contributing guide
  - Clarify documentation of run command
+ - Clarify documentation of can_run command
 
  [ENHANCEMENTS]
 
