Update ChangeLog, remove "TODO" mark from tests related to #1508
This is made in a separate commit so to ease cherry-picking
between two alternative fixes proposed in distinct commits.

In any case, all tests pass either way.

CHANGES:
=============
modified: t/issue/1508.t
modified: ChangeLog

HOW TO TEST :
=============
$ prove -v t/issue/1508.t   # for this issue
$ prove t/**/*.t            # for non-regression

--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,7 @@ Revision history for Rex
 
  [BUG FIXES]
  - Detect invalid hostgroup expressions
+ - Propagate args/params down to "needed" tasks launched by needs()
 
  [DOCUMENTATION]
 
