--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,7 @@ Revision history for Rex
  - Detect invalid hostgroup expressions
 
  [DOCUMENTATION]
+ - Clarify optional arguments of file commands
 
  [ENHANCEMENTS]
 
