Fix git cloning into an existing empty directory
To decide whether to clone or update the repository, the interesting
case to check is whether the target already looks like a git repository
or not. Further sanity checking may be offloaded to the git binary.

--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,7 @@ Revision history for Rex
 
  [BUG FIXES]
  - Fix switching working directory to another drive
+ - Fix git cloning into an existing empty directory
 
  [DOCUMENTATION]
 
