Fix tests on Strawberry Perl older than 5.18.4
Subtest arguments are supported only from Test-Simple-1.001004_001, and
breaking tests on Strawberry Perl before 5.18.4.

I also find passing subtest arguments slightly less readable, hence the
choice to make usage consistent with the rest of the test suite, instead
of depending on a new enough Test-Simple distribution.

--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,7 @@ Revision history for Rex
  [BUG FIXES]
  - Detect invalid hostgroup expressions
  - Prevent empty log lines upon Rexfile warnings
+ - Fix tests on Strawberry Perl older than 5.18.4
 
  [DOCUMENTATION]
  - Clarify optional arguments of file commands
