--- a/ChangeLog
+++ b/ChangeLog
@@ -14,6 +14,7 @@ Revision history for Rex
 
  [ENHANCEMENTS]
  - Show Rexfile path in loading messages
+ - Hide internal details when Rexfile loading fails
 
  [MAJOR]
 
