Fix test warnings on Perl before 5.16.0
The += operator causes "Use of uninitialized value" warnings before Perl
5.16.0 when used with undefined tied variables, such as plainly declared
Rex shared variables.

--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,7 @@ Revision history for Rex
  - Detect invalid hostgroup expressions
  - Prevent empty log lines upon Rexfile warnings
  - Fix tests on Strawberry Perl older than 5.18.4
+ - Fix test warnings on Perl before 5.16.0
 
  [DOCUMENTATION]
  - Clarify optional arguments of file commands
