--- a/ChangeLog
+++ b/ChangeLog
@@ -17,6 +17,9 @@ Revision history for Rex
 
  [REVISION]
 
+1.14.0 2023-02-05 Ferenc Erki <erkiferenc@gmail.com>
+ - No code changes since 1.13.4.1 trial release
+
 1.13.4.1-TRIAL 2023-01-30 Ferenc Erki <erkiferenc@gmail.com>
  [BUG FIXES]
  - Detect invalid hostgroup expressions
