Fix attempt to free unreferenced scalar on Windows
Nested subtests, and maybe forking in them, caused "Attempt to free
unreferenced scalar" errors on Windows with some versions of Perl
(before 5.20.3 or 5.20.2).

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,7 @@ Revision history for Rex
  [API CHANGES]
 
  [BUG FIXES]
+ - Fix attempt to free unreferenced scalar on Windows
 
  [DOCUMENTATION]
 
