--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,7 @@ Revision history for Rex
  - Fix attempt to free unreferenced scalar on Windows
 
  [DOCUMENTATION]
+ - Fix rendering of inspect example
 
  [ENHANCEMENTS]
 
