Clarify documentation of desc command

--- a/ChangeLog
+++ b/ChangeLog
@@ -8,6 +8,7 @@ Revision history for Rex
 
  [DOCUMENTATION]
  - Fix rendering of inspect example
+ - Clarify documentation of desc command
 
  [ENHANCEMENTS]
 
