--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,7 @@ Revision history for Rex
  [BUG FIXES]
  - Fix attempt to free unreferenced scalar on Windows
  - Declare dependencies for colored output
+ - Fix warning when trying to create root directory
 
  [DOCUMENTATION]
  - Fix rendering of inspect example
