--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,7 @@ Revision history for Rex
 
  [DOCUMENTATION]
  - Clarify PATH settings for executing commands
+ - Clarify sync command locality
 
  [ENHANCEMENTS]
 
