--- a/ChangeLog
+++ b/ChangeLog
@@ -8,6 +8,7 @@ Revision history for Rex
  [DOCUMENTATION]
  - Clarify PATH settings for executing commands
  - Clarify sync command locality
+ - Clarify run command output handling
 
  [ENHANCEMENTS]
 
