--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,7 @@ Revision history for Rex
  [BUG FIXES]
  - Fix switching working directory to another drive
  - Fix git cloning into an existing empty directory
+ - Fix Rexfile loading tests after perl-5.37.9
 
  [DOCUMENTATION]
 
