Fix inconsistent augtool wrapper usage

--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,7 @@ Revision history for Rex
 
  [BUG FIXES]
  - Return only the first found command
+ - Fix inconsistent augtool wrapper usage
 
  [DOCUMENTATION]
 
