Fix Config::Augeas detection

--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,7 @@ Revision history for Rex
  [BUG FIXES]
  - Return only the first found command
  - Fix inconsistent augtool wrapper usage
+ - Fix Config::Augeas detection
 
  [DOCUMENTATION]
 
