Fix missing argument warnings from Text::Wrap
Text::Wrap-2023.0509 emits “Missing argument in sprintf” warnings.

--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,7 @@ Revision history for Rex
 
  [BUG FIXES]
  - Fix precedence warning after perl-5.41.4
+ - Fix missing argument warnings from Text::Wrap
 
  [DOCUMENTATION]
 
