--- a/ChangeLog
+++ b/ChangeLog
@@ -4,10 +4,6 @@ Revision history for Rex
  [API CHANGES]
 
  [BUG FIXES]
- - Return only the first found command
- - Fix inconsistent augtool wrapper usage
- - Fix Config::Augeas detection
- - Fix on_change in update_system command on Redhat
 
  [DOCUMENTATION]
 
@@ -18,10 +14,19 @@ Revision history for Rex
  [MINOR]
 
  [NEW FEATURES]
- - Add config option to prepend Augeas commands
- - Add config option to control local Augeas backend
 
  [REVISION]
+
+1.14.3.1-TRIAL 2024-10-30 Ferenc Erki <erkiferenc@gmail.com>
+ [BUG FIXES]
+ - Return only the first found command
+ - Fix inconsistent augtool wrapper usage
+ - Fix Config::Augeas detection
+ - Fix on_change in update_system command on Redhat
+
+ [NEW FEATURES]
+ - Add config option to prepend Augeas commands
+ - Add config option to control local Augeas backend
 
 1.14.3 2023-08-05 Ferenc Erki <erkiferenc@gmail.com>
  - No code changes since the 1.14.2.3-TRIAL release
