Fix memory detection warnings on Solaris

--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,7 @@ Revision history for Rex
  [BUG FIXES]
  - Fix precedence warning after perl-5.41.4
  - Fix missing argument warnings from Text::Wrap
+ - Fix memory detection warnings on Solaris
 
  [DOCUMENTATION]
 
