Support command environment variables on Windows

--- a/ChangeLog
+++ b/ChangeLog
@@ -9,6 +9,7 @@ Revision history for Rex
 
  [ENHANCEMENTS]
  - Quote command arguments on Windows
+ - Support command environment variables on Windows
 
  [MAJOR]
 
