--- a/ChangeLog
+++ b/ChangeLog
@@ -4,7 +4,6 @@ Revision history for Rex
  [API CHANGES]
 
  [BUG FIXES]
- - Fix git rebase tests on old git versions
 
  [DOCUMENTATION]
 
@@ -13,11 +12,17 @@ Revision history for Rex
  [MAJOR]
 
  [MINOR]
- - Set minimum required Perl version to 5.14.4
 
  [NEW FEATURES]
 
  [REVISION]
+
+1.15.0.2-TRIAL 2025-01-29 Ferenc Erki <erkiferenc@gmail.com>
+ [BUG FIXES]
+ - Fix git rebase tests on old git versions
+
+ [MINOR]
+ - Set minimum required Perl version to 5.14.4
 
 1.15.0.1-TRIAL 2025-01-21 Ferenc Erki <erkiferenc@gmail.com>
  [BUG FIXES]
