Fix parsing free memory on Solaris

--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,7 @@ Revision history for Rex
  [BUG FIXES]
  - Fix FQDN parsing
  - Handle SMBios errors gracefully
+ - Fix parsing free memory on Solaris
 
  [DOCUMENTATION]
 
