--- a/ChangeLog
+++ b/ChangeLog
@@ -8,6 +8,7 @@ Revision history for Rex
  - Handle SMBios errors gracefully
  - Fix parsing free memory on Solaris
  - Fix shared variable lockfile on Solaris
+ - Prefer GNU tools on Solaris
 
  [DOCUMENTATION]
 
