Fix parsing FreeBSD memory details

--- a/ChangeLog
+++ b/ChangeLog
@@ -9,6 +9,7 @@ Revision history for Rex
  - Fix parsing free memory on Solaris
  - Fix shared variable lockfile on Solaris
  - Prefer GNU tools on Solaris
+ - Fix parsing FreeBSD memory details
 
  [DOCUMENTATION]
 
