Recognize laundry memory on FreeBSD

--- a/ChangeLog
+++ b/ChangeLog
@@ -10,6 +10,7 @@ Revision history for Rex
  - Fix shared variable lockfile on Solaris
  - Prefer GNU tools on Solaris
  - Fix parsing FreeBSD memory details
+ - Recognize laundry memory on FreeBSD
 
  [DOCUMENTATION]
 
