Fix command existence checks without which

--- a/ChangeLog
+++ b/ChangeLog
@@ -11,6 +11,7 @@ Revision history for Rex
  - Prefer GNU tools on Solaris
  - Fix parsing FreeBSD memory details
  - Recognize laundry memory on FreeBSD
+ - Fix command existence checks without which
 
  [DOCUMENTATION]
 
