--- a/ChangeLog
+++ b/ChangeLog
@@ -17,6 +17,10 @@ Revision history for Rex
 
  [REVISION]
 
+1.16.0.3-TRIAL 2025-06-29 Ferenc Erki <erkiferenc@gmail.com>
+ [REVISION]
+ - Allow libxml2 version warnings for CPAN Testers
+
 1.16.0.2-TRIAL 2025-06-16 Ferenc Erki <erkiferenc@gmail.com>
  [BUG FIXES]
  - Fix hostgroup membership list for all groups
